--- a/Split_Bills/start_split/start_split.css
+++ b/Split_Bills/start_split/start_split.css
@@ -1,27 +1,33 @@
 .number_of_people{
 	height:50vh;
+	overflow:auto;
 }
 .number_of_people_interface{
+	height:calc(50vh - 8px);
+	width:calc(100% - 8px);
+	margin:4px;
 	border-radius:20px;
-	padding:50px;
-	//margin:10px;
-	background-color:rgb(255,255,255);
-	box-shadow:0px 0px 8px 0px rgba(0,0,0,0.1);
-}
-.number_of_people_title{
-	font-size:30px;
-	text-align:center;
 	padding:20px;
+	background-color:rgb(255,255,255);
+	box-shadow:0px 0px 8px 0px rgba(0,0,0,0.5);
+}
+.new_people_btn{
+	text-align:center;
+	overflow-y:auto;
 }
 
 .split_result{
 	height:50vh;
+	overflow:auto;
 }
 .split_result_interface{
+	height:calc(50vh - 8px);
+	width:calc(100% - 8px);
+	margin:4px;
 	border-radius:20px;
-	padding:50px;
+	padding:20px;
 	background-color:rgb(255,255,255);
-	box-shadow:0px 0px 8px 0px rgba(0,0,0,0.1);
+	box-shadow:0px 0px 8px 0px rgba(0,0,0,0.5);
 }
 .split_result_title{
 	font-size:30px;
@@ -31,12 +37,16 @@
 
 .expenses{
 	height:70vh;
+	overflow:auto;
 }
 .expenses_interface{
+	height:calc(70vh - 8px);
+	width:calc(100% - 8px);
+	margin:4px;
 	border-radius:20px;
-	padding:50px;
+	padding:20px;
 	background-color:rgb(255,255,255);
-	box-shadow:0px 0px 8px 0px rgba(0,0,0,0.1);
+	box-shadow:0px 0px 8px 0px rgba(0,0,0,0.5);
 }
 .expenses_title{
 	font-size:30px;
@@ -46,12 +56,16 @@
 
 .split_conditions{
 	height:30vh;
+	overflow:auto;
 }
 .split_conditions_interface{
+	height:calc(30vh - 8px);
+	width:calc(100% - 8px);
+	margin:4px;
 	border-radius:20px;
-	padding:50px;
+	padding:20px;
 	background-color:rgb(255,255,255);
-	box-shadow:0px 0px 8px 0px rgba(0,0,0,0.1);
+	box-shadow:0px 0px 8px 0px rgba(0,0,0,0.5);
 }
 .split_conditions_title{
 	font-size:30px;
@@ -59,11 +73,6 @@
 	padding:20px;
 }
 
-.btn_start{
-	padding:15px;
-	margin-top:25px;
-	font-size:30px;
-}
 .btn{
 	font-weight:bold;
 	border-width:2px;
