--- a/Split_Bills/start_split/start_split.css
+++ b/Split_Bills/start_split/start_split.css
@@ -1,6 +1,5 @@
 .number_of_people{
 	height:50vh;
-	overflow:auto;
 }
 .number_of_people_interface{
 	height:calc(50vh - 8px);
@@ -10,6 +9,7 @@
 	padding:20px;
 	background-color:rgb(255,255,255);
 	box-shadow:0px 0px 8px 0px rgba(0,0,0,0.5);
+	overflow:auto;
 }
 .new_people_btn{
 	text-align:center;
@@ -36,11 +36,11 @@
 }
 
 .expenses{
-	height:70vh;
+	height:60vh;
 	overflow:auto;
 }
 .expenses_interface{
-	height:calc(70vh - 8px);
+	height:calc(60vh - 8px);
 	width:calc(100% - 8px);
 	margin:4px;
 	border-radius:20px;
@@ -55,11 +55,11 @@
 }
 
 .split_conditions{
-	height:30vh;
+	height:40vh;
 	overflow:auto;
 }
 .split_conditions_interface{
-	height:calc(30vh - 8px);
+	height:calc(40vh - 8px);
 	width:calc(100% - 8px);
 	margin:4px;
 	border-radius:20px;
@@ -73,6 +73,12 @@
 	padding:20px;
 }
 
+.jconfirm-title{
+	font-weight:bold;
+}
+.name_edit_button,.name_delete_button{
+	cursor:pointer;
+}
 .btn{
 	font-weight:bold;
 	border-width:2px;
