--- a/Split_Bills/start_split/start_split.css
+++ b/Split_Bills/start_split/start_split.css
@@ -11,8 +11,11 @@
 	box-shadow:0px 0px 8px 0px rgba(0,0,0,0.5);
 	overflow:auto;
 }
-.new_people_btn{
-	text-align:center;
+.name_edit_button,.name_delete_button{
+	cursor:pointer;
+	margin:-200px;
+	border:transparent;
+	background:transparent;
 }
 
 .split_result{
@@ -47,9 +50,6 @@
 	box-shadow:0px 0px 8px 0px rgba(0,0,0,0.5);
 	overflow:auto;
 }
-.new_people_btn{
-	text-align:center;
-}
 
 .split_conditions{
 	height:40vh;
@@ -73,13 +73,18 @@
 .jconfirm-title{
 	font-weight:bold;
 }
-.name_edit_button,.name_delete_button{
-	cursor:pointer;
-	margin:-200px;
-	border:transparent;
-	background:transparent;
-}
 .btn{
 	font-weight:bold;
 	border-width:2px;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
