--- a/Split_Bills/start_split/start_split.css
+++ b/Split_Bills/start_split/start_split.css
@@ -1,8 +1,8 @@
 .number_of_people{
-	height:50vh;
+	height:60vh;
 }
 .number_of_people_interface{
-	height:calc(50vh - 8px);
+	height:calc(60vh - 8px);
 	width:calc(100% - 8px);
 	margin:4px;
 	border-radius:20px;
@@ -18,6 +18,7 @@
 	background:transparent;
 }
 
+/*
 .split_result{
 	height:50vh;
 }
@@ -36,12 +37,13 @@
 	text-align:center;
 	padding:20px;
 }
+*/
 
 .expenses{
-	height:60vh;
+	height:100vh;
 }
 .expenses_interface{
-	height:calc(60vh - 8px);
+	height:calc(100vh - 8px);
 	width:calc(100% - 8px);
 	margin:4px;
 	border-radius:20px;
@@ -49,6 +51,9 @@
 	background-color:rgb(255,255,255);
 	box-shadow:0px 0px 8px 0px rgba(0,0,0,0.5);
 	overflow:auto;
+}
+.payer_add_btn,.consumer_add_btn{
+	border:transparent;
 }
 
 .split_conditions{
@@ -68,6 +73,8 @@
 	font-size:30px;
 	text-align:center;
 	padding:20px;
+}
+.new_split_condition_btn{
 }
 
 .jconfirm-title{
