--- a/Split_Bills/start_split/start_split.css
+++ b/Split_Bills/start_split/start_split.css
@@ -18,27 +18,6 @@
 	background:transparent;
 }
 
-/*
-.split_result{
-	height:50vh;
-}
-.split_result_interface{
-	height:calc(50vh - 8px);
-	width:calc(100% - 8px);
-	margin:4px;
-	border-radius:20px;
-	padding:20px;
-	background-color:rgb(255,255,255);
-	box-shadow:0px 0px 8px 0px rgba(0,0,0,0.5);
-	overflow:auto;
-}
-.split_result_title{
-	font-size:30px;
-	text-align:center;
-	padding:20px;
-}
-*/
-
 .expenses{
 	height:100vh;
 }
@@ -63,6 +42,12 @@
     border-radius:0.25rem;
     border-top-left-radius:0px;
     border-bottom-left-radius:0px;
+}
+.expense_edit_button,.expense_delete_button{
+	cursor:pointer;
+	margin:-200px;
+	border:transparent;
+	background:transparent;
 }
 
 .split_conditions{
