--- a/Split_Bills/start_split/start_split.css
+++ b/Split_Bills/start_split/start_split.css
@@ -12,7 +12,6 @@
 	overflow:auto;
 }
 .name_edit_button,.name_delete_button{
-	cursor:pointer;
 	margin:-200px;
 	border:transparent;
 	background:transparent;
@@ -34,7 +33,6 @@
 .payer_add_btn,.consumer_add_btn{
 	border:transparent;
 	background-color:transparent;
-	cursor:pointer;
 }
 .payer_delete_btn,.consumer_delete_btn{
 	border:1px solid #ced4da;
@@ -44,7 +42,6 @@
     border-bottom-left-radius:0px;
 }
 .expense_edit_button,.expense_delete_button{
-	cursor:pointer;
 	margin:-200px;
 	border:transparent;
 	background:transparent;
@@ -71,9 +68,8 @@
 .split_condition_table_main{
 	cursor:pointer;
 }
-.split_condition_tip{
-	cursor:pointer;
-	margin:-200px;
+.split_condition_tip_btn{
+	float:right;
 	border:transparent;
 	background:transparent;
 }
